[project]
name = "nutils"
readme = "README.md"
authors = [
    { name = "Evalf", email = "info@evalf.com" },
]
requires-python = '~=3.7'
dependencies = [
    "appdirs~=1.0",
    "bottombar~=2.0.2",
    "numpy>=1.17",
    "nutils-poly~=1.0",
    "psutil~=5.0",
    "stringly",
    "treelog>=1.0b5",
]
dynamic = ["description", "version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
docs = ["Sphinx>=1.8"]
export_mpl = ["matplotlib>=1.3", "pillow>2.6"]
matrix_mkl = ["mkl"]
matrix_scipy = ["scipy>=0.13"]
import_gmsh = ["meshio"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
