[project]
name = "nutils"
readme = "README.md"
authors = [
    { name = "Evalf", email = "info@evalf.com" },
]
requires-python = '>=3.7'
dependencies = [
    "appdirs >=1,<2",
    "bottombar >=2,<3",
    "numpy >=1.17,<2",
    "nutils-poly >=1,<2",
    "psutil >=5,<6",
    "stringly",
    "treelog >=1,<2",
]
dynamic = ["description", "version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
docs = ["Sphinx >=1.8,<8"]
export_mpl = ["matplotlib >=3.3,<4"]
matrix_mkl = ["mkl"]
matrix_scipy = ["scipy >=0.13,<2"]
import_gmsh = ["meshio >=4,<6"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
